<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:circle="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bruce.circlelayout_w.MainActivity">

    <com.bruce.circlelayout_w.widget.CircleLayout
        android:id="@+id/main_circle_layout"
        android:layout_width="430dp"
        android:layout_height="430dp"
        android:layout_centerVertical="true"
        circle:firstChildPosition="East"
        circle:isRotating="true"
        circle:speed="50" >

        <com.bruce.circlelayout_w.widget.CircleImageView
            circle:name="@string/guide_title_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            circle:expandSrc="@drawable/circle_notification_preview"
            circle:src="@drawable/notification_logo" />

        <com.bruce.circlelayout_w.widget.CircleImageView
            circle:name="@string/guide_title_watch_face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            circle:expandSrc="@drawable/circle_watch_face_preview"
            circle:src="@drawable/watch_face_logo" />

        <com.bruce.circlelayout_w.widget.CircleImageView
            circle:name="@string/guide_title_google_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            circle:expandSrc="@drawable/circle_google_now_preview"
            circle:src="@drawable/google_now_logo" />

        <com.bruce.circlelayout_w.widget.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            circle:expandSrc="@drawable/circle_fitness_tracking_preview"
            circle:src="@drawable/fitness_tracking_logo" />

        <com.bruce.circlelayout_w.widget.CircleImageView
            circle:name="@string/guide_title_daily_tricking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            circle:expandSrc="@drawable/circle_daily_tracking_preview"
            circle:src="@drawable/daily_tracking_logo" />

        <com.bruce.circlelayout_w.widget.CircleImageView
            circle:name="@string/guide_title_heart_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            circle:expandSrc="@drawable/circle_heart_rate_preview"
            circle:src="@drawable/heart_rate_logo" />

        <com.bruce.circlelayout_w.widget.CircleImageView
            circle:name="@string/guide_title_google_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            circle:expandSrc="@drawable/circle_google_map_preview"
            circle:src="@drawable/google_map_logo" />

        <com.bruce.circlelayout_w.widget.CircleImageView
            circle:name="@string/guide_title_play_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            circle:expandSrc="@drawable/circle_google_music_preview"
            circle:src="@drawable/google_music_logo" />
        <com.bruce.circlelayout_w.widget.CircleImageView
            circle:name="@string/guide_title_hangouts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            circle:expandSrc="@drawable/circle_google_hangouts_preview"
            circle:src="@drawable/google_hangouts" />

        <com.bruce.circlelayout_w.widget.CircleImageView
            circle:name="@string/guide_title_mphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            circle:expandSrc="@drawable/circle_phone_preview"
            circle:src="@drawable/phone_logo" />

    </com.bruce.circlelayout_w.widget.CircleLayout>
</RelativeLayout>
